--- a/src/Server/LazyWelfare.ServerHost/LazyWelfare.ServerHost.csproj
+++ b/src/Server/LazyWelfare.ServerHost/LazyWelfare.ServerHost.csproj
@@ -47,6 +47,9 @@
     <Reference Include="Common.Logging.Log4Net1215, Version=3.4.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Common.Logging.Log4Net1215.3.4.1\lib\net40\Common.Logging.Log4Net1215.dll</HintPath>
     </Reference>
+    <Reference Include="CSCore, Version=1.2.1.2, Culture=neutral, PublicKeyToken=5a08f2b6f4415dea, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\CSCore.1.2.1.2\lib\net35-client\CSCore.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
     </Reference>
@@ -82,6 +85,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Command\AppVolume.cs" />
+    <Compile Include="Command\WindowsVolume.cs" />
     <Compile Include="Ctrls\BitmapRenderer.cs" />
     <Compile Include="Ctrls\ImageCreate.cs" />
     <Compile Include="Ctrls\NotificationAreaIcon.cs" />
@@ -167,6 +172,10 @@
     <ProjectReference Include="..\..\Core\LazyWelfare.Service\LazyWelfare.Common.csproj">
       <Project>{194258ba-bd69-417b-8773-015471508cb4}</Project>
       <Name>LazyWelfare.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LazyWelfare.ServerCore\LazyWelfare.ServerCore.csproj">
+      <Project>{e8304128-61d6-46b2-9875-3b64f7da714c}</Project>
+      <Name>LazyWelfare.ServerCore</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
