--- a/src/Server/LazyWelfare.ServerHost/packages.config
+++ b/src/Server/LazyWelfare.ServerHost/packages.config
@@ -3,6 +3,7 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
   <package id="Common.Logging.Log4Net1215" version="3.4.1" targetFramework="net461" />
+  <package id="CSCore" version="1.2.1.2" targetFramework="net462" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
