--- a/src/Server/LazyWelfare.ServerCore/LazyWelfare.ServerCore.csproj
+++ b/src/Server/LazyWelfare.ServerCore/LazyWelfare.ServerCore.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.IO.Pipes.AccessControl" Version="4.4.0" />
   </ItemGroup>
 
