--- a/src/Core/LazyWelfare.Service/LazyWelfare.Common.csproj
+++ b/src/Core/LazyWelfare.Service/LazyWelfare.Common.csproj
@@ -52,8 +52,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Command\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
