--- a/src/Server/LazyWelfare.ServerWeb/appsettings.json
+++ b/src/Server/LazyWelfare.ServerWeb/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "TimeTaskConnection\"": "Data Source=hangfire.data;Version=3;Journal Mode=Persist;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
