--- a/src/Server/LazyWelfare.ServerHost/LazyWelfare.ServerHost.csproj
+++ b/src/Server/LazyWelfare.ServerHost/LazyWelfare.ServerHost.csproj
@@ -155,6 +155,9 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
