--- a/src/Server/LazyWelfare.ServerHost/appsettings.json
+++ b/src/Server/LazyWelfare.ServerHost/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "TimeTaskConnection": "Data Source=hangfire.data;"
+    "TimeTaskConnection": "Data Source=hangfire.data;Version=3;Journal Mode=Persist;"
   },
   "Logging": {
     "IncludeScopes": false,
